--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "del": "^0.1.3",
     "gitdown": "^1.3.0",
     "gulp": "^3.8.11",
-    "gulp-eslint": "^0.5.0",
+    "gulp-eslint": "^0.11.1",
     "gulp-header": "^1.2.2",
     "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.3.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.0.1",
+    "jshint-stylish": "^1.0.1",
     "jsonfile": "^2.0.0",
     "karma": "^0.12.24",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon-chai": "^0.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "hammerjs": "^2.0.4",
